Fix T79077: Off-screen rendering ignores shading argument

Thumbnails used the 3D view shading mode when a camera wasn't used.